--- a/index.html
+++ b/index.html
@@ -317,17 +317,17 @@
       <div class="footer-list">
         <ul>
           <li>
-            <a href="https://web.facebook.com/alex.kinter?_rdc=1&_rdr" target="_blank">
+            <a href="https://www.ebay.com/itm/144743015505" target="_blank">
               <img src="assets/img/social/ebay.svg" alt="">
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/alexjkinter/" target="_blank">
+            <a href="https://www.linkedin.com/in/ellie-martin-0b5880252" target="_blank">
               <img src="assets/img/social/linkedin.svg" alt="">
             </a>
           </li>
           <li>
-            <a href="https://www.twitter.com/alexjkinter" target="_blank">
+            <a href="https://www.facebook.com/theeresumecorner" target="_blank">
               <img src="assets/img/social/facebook.svg" alt="">
             </a>
           </li>
