--- a/index.html
+++ b/index.html
@@ -372,7 +372,19 @@
   </div>
   <!--.page-loader-->
 
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/6360b4e2b0d6371309cc9973/1ggos56g7';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/swiper/swiper-bundle.min.js"></script>
