--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css" />
+  <link rel="stylesheet" href="assets/css/main.css?v=2324" />
 </head>
+
 <body>
   <!--[if lte IE 9]>
       <p class="browserupgrade">
@@ -33,8 +34,9 @@
           <a class="navbar-brand" href="index.html">
             <img src="assets/img/logo/logo.png" alt="">
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="toggler-icon"></span>
             <span class="toggler-icon"></span>
             <span class="toggler-icon"></span>
@@ -103,7 +105,9 @@
       <div class="row g-5">
         <div class="col-lg-4 col-md-6">
           <div class="ser-single">
-            <i class="fa fa-check-square-o ser-icon" aria-hidden="true"></i>
+            <i>
+              $55
+            </i>
             <h3> Resume Distribution </h3>
             <p>
               For career seekers, TRC offers the most effective and affordable
@@ -114,13 +118,20 @@
               firms. Let us take care of applying and passing your resume to a massive number
               of the advertised job positions!
             </p>
-            <a href="#contact" class="btn-buy"> $45 Get Now </a>
+
+            <div class="buy-fl">
+
+              <a href="#contact" class="btn-buy"> Get Started </a>
+            </div><!-- /.buy-fl -->
+
           </div><!-- /.ser-single -->
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4 col-md-6">
           <div class="ser-single">
-            <i class="fa fa-check-square-o ser-icon" aria-hidden="true"></i>
+            <i>
+              $75
+            </i>
             <h3> Resume </h3>
             <p>
               TRC will expertly tailor and professionally optimize your resume that
@@ -128,27 +139,38 @@
               a successful job search.Includes finalized documents in PDF, two rounds of
               revisions on each document
             </p>
-            <a href="#contact" class="btn-buy"> $55 Get Now </a>
+            <div class="buy-fl">
+
+              <a href="#contact" class="btn-buy"> Get Started </a>
+            </div><!-- /.buy-fl -->
           </div><!-- /.ser-single -->
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4 col-md-6">
           <div class="ser-single">
-            <i class="fa fa-check-square-o ser-icon" aria-hidden="true"></i>
+            <i>
+              $15
+            </i>
             <h3> Cover Letter (Basic) </h3>
             <p>
               Are you applying to a specific position? Maybe you’re looking
               for a professionally written letter that you can tailor to fit the needs of
-              multiple opportunities. Create a strong, impactful cover letter that supports your resume and presents your most
+              multiple opportunities. Create a strong, impactful cover letter that supports your resume and presents
+              your most
               relevant skills, experience, and accomplishments.
             </p>
-            <a href="#contact" class="btn-buy"> $15 Get Now </a>
+            <div class="buy-fl">
+
+              <a href="#contact" class="btn-buy"> Get Started </a>
+            </div><!-- /.buy-fl -->
           </div><!-- /.ser-single -->
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4 col-md-6">
           <div class="ser-single">
-            <i class="fa fa-check-square-o ser-icon" aria-hidden="true"></i>
+            <i>
+              $35
+            </i>
             <h3> Cover Letter (Targeted) </h3>
             <p>
               Are you applying to a specific position? Maybe you’re looking
@@ -156,13 +178,18 @@
               multiple opportunities. Create a strong, impactful cover letter that supports
               your resume and presents your most relevant skills, experience, and accomplishments.
             </p>
-            <a href="#contact" class="btn-buy"> $25 Get Now </a>
+            <div class="buy-fl">
+
+              <a href="#contact" class="btn-buy"> Get Started </a>
+            </div><!-- /.buy-fl -->
           </div><!-- /.ser-single -->
         </div><!-- /.col-lg-4 -->
 
         <div class="col-lg-4 col-md-6">
           <div class="ser-single">
-            <i class="fa fa-check-square-o ser-icon" aria-hidden="true"></i>
+            <i>
+              $55
+            </i>
             <h3> Linkedin Profile Development </h3>
             <p>
               TRC will create a strong online presence that speaks to
@@ -170,12 +197,92 @@
               an optimized LinkedIn profile that boosts your visibility to hiring managers and
               recruiters.
             </p>
-            <a href="#contact" class="btn-buy"> $45 Get Now </a>
+            <div class="buy-fl">
+
+              <a href="#contact" class="btn-buy"> Get Started </a>
+            </div><!-- /.buy-fl -->
           </div><!-- /.ser-single -->
         </div><!-- /.col-lg-4 -->
 
 
       </div><!-- /.row -->
+
+      <div class="pt-5">
+        <div class="sec-t text-center">
+          <h2> Business Package </h2>
+        </div><!-- /.sec-t -->
+        <div class="row g-5">
+          <div class="col-lg-4 col-md-6">
+            <div class="ser-single">
+              <i>
+                $1200/Month
+              </i>
+              <h3> Starter </h3>
+              <p>
+                Elevate student success! Our comprehensive Starter package. includes personalized
+                resumes, compelling cover letters, and 1-1 career coaching via Zoom, Microsoft Teams,
+                or phone. Empowering students to define their professional narrative and excel in their
+                future endeavors. This package is limited to a maximum of 75 students. Let's craft
+                careers together
+              </p>
+
+              <div class="buy-fl">
+
+                <a href="#contact" class="btn-buy"> Get Started </a>
+              </div><!-- /.buy-fl -->
+
+            </div><!-- /.ser-single -->
+          </div><!-- /.col-lg-4 -->
+
+          <div class="col-lg-4 col-md-6">
+            <div class="ser-single">
+              <i>
+                $2200/Month
+              </i>
+              <h3> Premium </h3>
+              <p>
+                Elevate your students' career prospects
+                with our comprehensive Premium package. We craft polished resumes and cover letters,
+                offer personalized 1-on-1 career coaching via Zoom, Microsoft Teams, or phone, and
+                optimize LinkedIn profiles. This package is limited to a maximum of 125 students.
+                Invest in their futures today!
+
+              </p>
+              <div class="buy-fl">
+
+                <a href="#contact" class="btn-buy"> Get Started </a>
+              </div><!-- /.buy-fl -->
+            </div><!-- /.ser-single -->
+          </div><!-- /.col-lg-4 -->
+
+          <div class="col-lg-4 col-md-6">
+            <div class="ser-single">
+              <i>
+                $3000/Month
+              </i>
+              <h3> Advance </h3>
+              <p>
+                Unlock unparalleled career support for your
+                students with our comprehensive Advance Package. We specialize in creating impactful
+                resumes and compelling cover letters, empowering students to stand out in today's
+                competitive job market. Our dedicated 1-1 career coaching sessions via Zoom, Microsoft
+                Teams, or phone provide tailored guidance. Elevate opportunities further with our
+                resume distribution service. This package is limited to a maximum of 300 students
+                Let's collaborate to set them on the path to success!
+
+              </p>
+              <div class="buy-fl">
+
+                <a href="#contact" class="btn-buy"> Get Started </a>
+              </div><!-- /.buy-fl -->
+            </div><!-- /.ser-single -->
+          </div><!-- /.col-lg-4 -->
+
+
+         
+
+        </div><!-- /.row -->
+      </div><!-- /.pt-5 -->
 
     </div><!-- /.container -->
   </section><!-- /.services -->
@@ -256,48 +363,52 @@
         <p>
           Please complete the assessment below, and we will be in touch within 24 hours.
           We look forward to working with you! For general inquiries please email us at:
-           <a href="mailto:resumes@theresumecorner.com"> resumes@theresumecorner.com </a>
+          <a href="mailto:resumes@theresumecorner.com"> resumes@theresumecorner.com </a>
         </p>
       </div><!-- /.sec-t -->
 
       <div class="form-box">
-        <form>
+        <form method="POST" id="contact-form">
           <div class="row gy-4">
             <div class="col-lg-6">
               <div class="form-grp">
-                <input type="text" class="form-control" placeholder="Your Name*">
+                <input type="text" class="form-control name" id="NAME" name="name" placeholder="Your Name*">
+                <div class="invalid-feedback nameError"></div>
               </div><!-- /.form-grp -->
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-6">
               <div class="form-grp">
-                <input type="email" class="form-control" placeholder="Your Email*">
+                <input type="email" class="form-control email" id="EMAIL" name="email" placeholder="Your Email*">
+                <div class="invalid-feedback emailError"></div>
               </div><!-- /.form-grp -->
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-6">
               <div class="form-grp">
-                <input type="text" class="form-control" placeholder="Target industry or Job Title">
+                <input type="text" class="form-control subject" id="SUBJECT" name="subject"
+                  placeholder="Target industry or Job Title*">
+                <div class="invalid-feedback subError"></div>
               </div><!-- /.form-grp -->
             </div><!-- /.col-lg-6 -->
             <div class="col-lg-6">
               <div class="form-grp">
-                <input type="text" class="form-control" placeholder="Your Phone Number">
+                <input type="text" class="form-control" id="PHONE" name="phone" placeholder="Your Phone Number">
               </div><!-- /.form-grp -->
             </div><!-- /.col-lg-6 -->
           </div><!-- /.row -->
-         <div class="text-center">
-          <button class="btn-submit"> Submit Your Inquiry </button>
-         </div><!-- /.text-center -->
+          <div class="text-center">
+            <button class="btn-submit" type="submit"> Submit Your Inquiry </button>
+          </div><!-- /.text-center -->
         </form>
 
         <div class="payment-methods">
-          <h5> Payment Methods    </h5>
-          <a href="https://cash.app/$theresumecorner" target="_blank">
+          <h5> Payment Methods </h5>
+          <a href="https://cash.app/$careercatalys" target="_blank">
             <img src="assets/img/social/cashapp.svg" alt="">
           </a>
-          <a href="https://account.venmo.com/u/theresumecorner" target="_blank">
+          <a href="https://account.venmo.com/u/careercatalys" target="_blank">
             <img src="assets/img/social/venmo.svg" alt="">
           </a>
-          <a href="https://www.paypal.com/paypalme/theresumecorner" target="_blank">
+          <a href="https://www.paypal.com/paypalme/careersareercatalys" target="_blank">
             <img src="assets/img/social/paypall.svg" alt="">
           </a>
         </div><!-- /.payment-methods -->
@@ -347,9 +458,25 @@
   </footer><!-- /.main-footer -->
 
 
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/6362aac9b0d6371309ccf402/1ggsmm982';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
+
+
+
 
   <a href="#" class="scroll-top btn-hover">
-   <i class="fa fa-chevron-up" aria-hidden="true"></i>
+    <i class="fa fa-chevron-up" aria-hidden="true"></i>
   </a>
   <!--.scroll-top-->
 
@@ -372,23 +499,38 @@
   </div>
   <!--.page-loader-->
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-  s1.async=true;
-  s1.src='https://embed.tawk.to/6360b4e2b0d6371309cc9973/1ggos56g7';
-  s1.charset='UTF-8';
-  s1.setAttribute('crossorigin','*');
-  s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
+  <!-- ======= ajax loading ======= -->
+  <div id="loader-ajax" class="loading-ajax hidden">Loading&#8230;</div>
+  <!-- ======= ajax loading end ======= -->
+  <!-- ======= ajax sucess popup ======= -->
+  <!-- Modal HTML -->
+  <div id="S_Modal" class="modal fade modal-index">
+    <div class="modal-dialog modal-confirm  modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="icon-box">
+            <i class="fa fa-check" aria-hidden="true"></i>
+          </div>
+          <h4 class="modal-title w-100">Success!</h4>
+        </div>
+        <div class="modal-body">
+          <p class="text-center" id="resultS"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatem,
+            facilis! </p>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-success w-100" data-bs-dismiss="modal">OK</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ======= ajax sucess popup end ======= -->
 
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/swiper/swiper-bundle.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/form.js"></script>
 
   <script>
     //===== text-blink
