--- a/index.html
+++ b/index.html
@@ -204,6 +204,26 @@
           </div><!-- /.ser-single -->
         </div><!-- /.col-lg-4 -->
 
+        <div class="col-lg-4 col-md-6">
+          <div class="ser-single">
+            <i>
+              $75
+            </i>
+            <h3> Bio </h3>
+            <p>
+              We offer tailored career bios that encapsulate your
+              achievements, skills, and aspirations. We craft a dynamic 2-page bio, delivering two
+              design options in PDF format. Enjoy up to three revisions and a swift 2-3 business day
+              turnaround. Let's bring your career story to life!
+            </p>
+            <div class="buy-fl">
+
+              <a href="#contact" class="btn-buy"> Get Started </a>
+            </div><!-- /.buy-fl -->
+          </div><!-- /.ser-single -->
+        </div><!-- /.col-lg-4 -->
+
+
 
       </div><!-- /.row -->
 
@@ -279,7 +299,7 @@
           </div><!-- /.col-lg-4 -->
 
 
-         
+
 
         </div><!-- /.row -->
       </div><!-- /.pt-5 -->
