--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
-  <title> The Resume Corner</title>
+  <title>  Career Catalys </title>
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- Favicons -->
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/swiper/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="assets/css/main.css?v=2324" />
+  <link rel="stylesheet" href="assets/css/main.css?v=12" />
 </head>
 
 <body>
@@ -52,6 +52,17 @@
               <li class="nav-item">
                 <a class="page-scroll" href="#work"> Our Work </a>
               </li>
+
+
+              <li class="nav-item">
+                <a class="page-scroll" href="#notebook"> Journals & Notebooks </a>
+              </li>
+
+              <li class="nav-item">
+                <a class="page-scroll" href="#certificate"> Certification </a>
+              </li>
+
+
               <li class="nav-item">
                 <a class="page-scroll" href="#contact"> Contact </a>
               </li>
@@ -315,10 +326,12 @@
       <div class="img-slider swiper">
         <div class="swiper-wrapper">
 
+
+
           <div class="swiper-slide">
 
             <div class="testimonial-item">
-              <img src="assets/img/resume/Resume-1.png" class="w-100" alt="events_pic_1">
+              <img src="assets/img/resume/BIO.png" class="w-100" alt="events_pic_1">
             </div>
             <!--swiper-slide-->
 
@@ -327,7 +340,7 @@
           <div class="swiper-slide">
 
             <div class="testimonial-item">
-              <img src="assets/img/resume/Resume-2.png" class="w-100" alt="events_pic_1">
+              <img src="assets/img/resume/BIO1.png" class="w-100" alt="events_pic_1">
             </div>
             <!--swiper-slide-->
 
@@ -336,7 +349,7 @@
           <div class="swiper-slide">
 
             <div class="testimonial-item">
-              <img src="assets/img/resume/Resume-3.png" class="w-100" alt="events_pic_1">
+              <img src="assets/img/resume/CV1.png" class="w-100" alt="events_pic_1">
             </div>
             <!--swiper-slide-->
 
@@ -345,7 +358,7 @@
           <div class="swiper-slide">
 
             <div class="testimonial-item">
-              <img src="assets/img/resume/Resume-4.png" class="w-100" alt="events_pic_1">
+              <img src="assets/img/resume/CV2.png" class="w-100" alt="events_pic_1">
             </div>
             <!--swiper-slide-->
 
@@ -354,7 +367,36 @@
           <div class="swiper-slide">
 
             <div class="testimonial-item">
-              <img src="assets/img/resume/Resume-5.png" class="w-100" alt="events_pic_1">
+              <img src="assets/img/resume/CV3.png" class="w-100" alt="events_pic_1">
+            </div>
+            <!--swiper-slide-->
+
+          </div><!-- End swiper-slide -->
+
+
+
+          <div class="swiper-slide">
+
+            <div class="testimonial-item">
+              <img src="assets/img/resume/R1.jpg" class="w-100" alt="events_pic_1">
+            </div>
+            <!--swiper-slide-->
+
+          </div><!-- End swiper-slide -->
+
+          <div class="swiper-slide">
+
+            <div class="testimonial-item">
+              <img src="assets/img/resume/R2.jpg" class="w-100" alt="events_pic_1">
+            </div>
+            <!--swiper-slide-->
+
+          </div><!-- End swiper-slide -->
+
+          <div class="swiper-slide">
+
+            <div class="testimonial-item">
+              <img src="assets/img/resume/R3.jpg" class="w-100" alt="events_pic_1">
             </div>
             <!--swiper-slide-->
 
@@ -372,6 +414,33 @@
   </section><!-- /.images-sec -->
 
 
+
+  <section class="section note sec-padding">
+    <div class="container">
+      <div class="sec-t text-center">
+        <h2> Certification Opportunities </h2>
+      </div><!-- /.sec-t -->
+
+      <div class="coming-con">
+        <img src="assets/img/resume/Book.png" class="w-100" alt="">
+        <h5> Coming Soon: Your Essential Toolkit for Professional Excellence! </h5>
+        <p>
+          Embark on a journey of self-discovery and career advancement with our upcoming
+          collection of Career Journals and Notebooks. Unleash your potential, set meaningful
+          goals, and navigate your professional path with confidence and purpose.
+        </p>
+        <p>
+          Stay tuned for the grand unveiling, where you'll find the perfect tools to sculpt your
+          career dreams into reality. Elevate your ambitions, embrace growth, and manifest a
+          future that's tailor-made for success.
+        </p>
+        <p>
+          Get ready to write your career story, one page at a time! ✍
+        </p>
+      </div><!-- /.coming-con -->
+
+    </div><!-- /.container -->
+  </section><!-- /.section note -->
 
 
 
