--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="navbar-area">
       <div class="container">
         <nav class="navbar navbar-expand-lg ">
-          <a class="navbar-brand" href="index.html">
-            <img src="assets/img/logo/logo.png" alt="">
+          <a class="navbar-brand" href="/">
+            <img src="assets/img/logo/logo-main.png" class="bg-white" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
