--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
       </div><!-- /.footer-list -->
 
       <div class="copy">
-        <span>Copyright © 2022 The Resume Corner </span>
+        <span>Copyright © 2022 Career Catalys </span>
       </div><!-- /.copy -->
     </div><!-- /.container -->
 
