--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       </div><!-- /.sec-t -->
 
       <div class="coming-con">
-        <img src="assets/img/resume/Book.png" class="w-100" alt="">
+        <img src="assets/img/resume/Book-removebg-preview.png" style="width: 350px; object-fit: contain;"  class="img-fluid" alt="">
         <h5> <span> Coming Soon!</span> <br> Your Essential Toolkit for Professional Excellence! </h5>
         <p>
           Embark on a journey of self-discovery and career advancement with our upcoming
