--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg ">
           <a class="navbar-brand" href="/">
-            <img src="assets/img/logo/logo-main.png" class="bg-white" alt="">
+            <img src="assets/img/logo/logo-1.png"  alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -99,7 +99,7 @@
         <h1> Solution for <br>
           <span class="txt-type" data-wait="3000" data-words='["Better Job","Satisfying Career","Happier You"]'></span>
         </h1>
-        <p> TRC offers the most effective and affordable
+        <p> Career Catalys offers the most effective and affordable
           service to help search for a new job. </p>
         <a href="#services" class="btn-main"> Explore </a>
       </div><!-- /.hero-inner -->
@@ -121,7 +121,7 @@
             </i>
             <h3> Resume Distribution </h3>
             <p>
-              For career seekers, TRC offers the most effective and affordable
+              For career seekers, Career Catalys offers the most effective and affordable
               service to help search for a new job. Our resume distribution service is
               targeted to employers in your field, according to the location and position
               required. We know how to do it right and initiate real connections with the
@@ -145,7 +145,7 @@
             </i>
             <h3> Resume </h3>
             <p>
-              TRC will expertly tailor and professionally optimize your resume that
+              Career Catalys will expertly tailor and professionally optimize your resume that
               speaks to what hiring managers are looking for and is the cornerstone of
               a successful job search.Includes finalized documents in PDF, two rounds of
               revisions on each document
@@ -203,7 +203,7 @@
             </i>
             <h3> Linkedin Profile Development </h3>
             <p>
-              TRC will create a strong online presence that speaks to
+              Career Catalys will create a strong online presence that speaks to
               your most marketable experience, skills, and training. We’ll help you develop
               an optimized LinkedIn profile that boosts your visibility to hiring managers and
               recruiters.
@@ -442,7 +442,7 @@
     </div><!-- /.container -->
   </section><!-- /.section note -->
 
-  <section class="cert sec-padding">
+  <section id="certificate" class="cert sec-padding">
     <div class="container">
       <div class="sec-t text-center">
         <h2> Certification Opportunities </h2>
@@ -541,7 +541,7 @@
 
     <div class="container">
       <div class="footer-list">
-        <ul>
+        <!-- <ul>
           <li>
             <a href="https://www.ebay.com/itm/144743015505" target="_blank">
               <img src="assets/img/social/ebay.svg" alt="">
@@ -557,9 +557,10 @@
               <img src="assets/img/social/facebook.svg" alt="">
             </a>
           </li>
-        </ul>
+        </ul> -->
 
         <p>Phone Number: 347-699-4410 <br>
+        Mail:  careers@careercatalys.com <br>
           Hours of operation M-F 8am-6pm
         </p>
 
