--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
               </li>
 
 
-              <li class="nav-item">
-                <a class="page-scroll" href="#notebook"> Journals & Notebooks </a>
-              </li>
+              <!-- <li class="nav-item">
+                <a class="page-scroll " href="#notebook"> Journals & Notebooks </a>
+              </li> -->
 
               <li class="nav-item">
-                <a class="page-scroll" href="#certificate"> Certification </a>
+                <a class="page-scroll" href="#certificate"> Motivational Merch </a>
               </li>
 
 
@@ -321,7 +321,7 @@
                 their field of study, providing invaluable insights and skills. Give your students a competitive edge in
                 today's job market. Partner with us to ensure a brighter future for your graduates. This package is
                 limited to a maximum of 75 students. Fully customizable to meet your specific needs.
-            
+
               </p>
               <div class="buy-fl">
 
@@ -436,7 +436,7 @@
 
 
 
-  <section id="notebook" class=" note sec-padding">
+  <section id="notebook" class=" note sec-padding d-none">
     <div class="container">
       <div class="sec-t text-center">
         <h2> Journals & Notebooks </h2>
@@ -467,22 +467,23 @@
   <section id="certificate" class="cert sec-padding">
     <div class="container">
       <div class="sec-t text-center">
-        <h2> Certification Opportunities </h2>
+        <h2> Motivational Merch </h2>
       </div><!-- /.sec-t -->
 
       <div class="coming-con">
 
-        <h5> <span> Coming Soon! </span> </h5>
-        <p>
-          Certification Opportunities Hub! Get ready to elevate your expertise
-          and unlock new career doors with our upcoming Certification Opportunities hub.
-          Discover a world of specialized knowledge and recognized credentials that can propel
-          you towards professional success.
+        <!-- <h5> <span> Coming Soon! </span> </h5> -->
 
-        </p>
         <p>
-          Stay tuned for the grand unveiling, where you'll find the gateway to certifications that can
-          elevate your career, fuel your passion, and help you stand out in a competitive world.
+          Motivational Merch Elevate your career journey
+          with Career Catalys upcoming line of motivational merchandise. Discover
+          inspiring journals, mugs, t-shirts, and more, designed to keep you
+          motivated and focused on achieving your goals.
+        </p>
+
+        <p>
+          Stay tuned for our launch
+          and get ready to boost your daily inspiration!
         </p>
 
       </div><!-- /.coming-con -->
@@ -542,9 +543,7 @@
           <a href="https://cash.app/$careercatalys" target="_blank">
             <img src="assets/img/social/cashapp.svg" alt="">
           </a>
-          <a href="https://account.venmo.com/u/careercatalys" target="_blank">
-            <img src="assets/img/social/venmo.svg" alt="">
-          </a>
+         
           <a href="https://www.paypal.com/paypalme/careersareercatalys" target="_blank">
             <img src="assets/img/social/paypall.svg" alt="">
           </a>
@@ -581,10 +580,18 @@
           </li>
         </ul> -->
 
-        <p>Phone Number: 347-699-4410 <br>
+        <p>Phone Number: (908) 460-6874 <br>
           Mail: careers@careercatalys.com <br>
           Hours of operation M-F 8am-6pm
         </p>
+
+        <div class="stars">
+          <img src="assets/img/star.png" alt="star">
+          <img src="assets/img/star.png" alt="star">
+          <img src="assets/img/star.png" alt="star">
+          <img src="assets/img/star.png" alt="star">
+          <img src="assets/img/star.png" alt="star">
+        </div><!-- /.stars -->
 
       </div><!-- /.footer-list -->
 
@@ -596,19 +603,7 @@
   </footer><!-- /.main-footer -->
 
 
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/6362aac9b0d6371309ccf402/1ggsmm982';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
+
 
 
 
